--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
           </div>
           <div class="attribution">
                Challenge by
-               <a
-                    href="https://www.frontendmentor.io?ref=challenge"
-                    target="_blank"
-                    >Frontend Mentor</a
-               >. Coded by
+               <a href="#" target="_blank">.....</a>. Coded by
                <a href="https://www.twitter.com/JimohAbdulsam1">Abdulsamad</a>.
           </div>
           <script src="app.js"></script>
